--- a/BlazorId/Client/Pages/Admin/Courses.razor
+++ b/BlazorId/Client/Pages/Admin/Courses.razor
@@ -185,7 +185,7 @@ else
     private List<Classroom> freeClassrooms = new List<Classroom>();
     private int courseId;
     private List<UserCourse>? userCourses;
-
+    private List<Holiday> holidays;
     // To hold any possible errors
     string strError = "";
     // To enable showing the form
@@ -222,12 +222,36 @@ else
         ShowPopup = 2;
     }
 
-    private void SelectTraining(Training training)
+    private async Task SelectTraining(Training training)
     {
+        int year = DateTime.Now.Year;
+        holidays = await client.GetFromJsonAsync<List<Holiday>>("api/Holiday/" + year);
         objCourse.TrainingId = training.Id;
         objCourse.Price = training.Price;
-        objCourse.EndDate = objCourse.StartDate.AddDays(training.Duration);
+        objCourse.EndDate = CalculateEndDate(objCourse.StartDate, training.Duration, holidays);
         ClosePopup();
+    }
+
+    static DateTime CalculateEndDate(DateTime startDate, int workingDays, List<Holiday> holidays)
+    {
+        int workingDaysLeft = workingDays;
+        DateTime currentDate = startDate.AddDays(-1);
+        while (workingDaysLeft > 0)
+        {
+            currentDate = currentDate.AddDays(1);
+            if (IsWorkingDay(currentDate, holidays))
+            {
+                workingDaysLeft--;
+            }          
+        }
+        return currentDate;
+    }
+
+    static bool IsWorkingDay(DateTime date, List<Holiday> holidays)
+    {
+        return date.DayOfWeek != DayOfWeek.Saturday &&
+               date.DayOfWeek != DayOfWeek.Sunday &&
+               !holidays.Exists(h => h.Day == date.Day && h.Month == date.Month);
     }
 
     private void ShowCandidates(Course editcourse)
